--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 'R : Selecting Informative Predictors Using Simulated Annealing and Genetic Algorithms'
+title: 'Feature Selection : Selecting Informative Predictors Using Simulated Annealing and Genetic Algorithms'
 author: "John Pauline Pineda"
 date: "December 22, 2022"
 output: 
