--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(echo = TRUE, fig.width=15, fig.height=10)
 ```
 # **1. Table of Contents**
 |
-| This project implements **Simulated Annealing** and **Genetic Algorithms** in selecting informative predictors for a modelling problem using the **Random Forest** and **Linear Discriminant Analysis** structures in <mark style="background-color: #CCECFF">**R**</mark>. The resulting predictions derived from the candidate models applying both **Simulated Annealing** and **Genetic Algorithms** were evaluated in terms of their discrimination power using the receiver operating characteristic (ROC) curve area under the curve (AUC) metric. The ROC AUC values were compared to those of the baseline models which made use of the full data without any form of feature selection, or implemented a model-specific feature selection process.
+| This project implements **Simulated Annealing** and **Genetic Algorithms** in selecting informative predictors for a modelling problem using the **Random Forest** and **Linear Discriminant Analysis** structures in <mark style="background-color: #CCECFF">**R**</mark>. The resulting predictions derived from the candidate models applying both **Simulated Annealing** and **Genetic Algorithms** were evaluated in terms of their predictive power using the accuracy metric. The accuracyvalues were compared to those of the baseline models which made use of the full data without any form of feature selection, or implemented a model-specific feature selection process. All results were consolidated in a [<span style="color: #FF0000">**Summary**</span>](#summary) presented at the end of the document.
 |
 | Feature selection is the process of reducing the number of input variables by eliminating redundant or unimportant features and narrowing down the set of features to those most relevant to the machine learning approach, resulting to simpler explainable models, shorter training times due to a more precise subset of features, reduction of variance, increase in precision estimates and more robust solution against the curse of high dimensionality. The algorithms applied in this study (mostly contained in the <mark style="background-color: #CCECFF">**caret**</mark> package) are wrapper feature selection methods which attempt to consider the task of selecting feature subsets as a search problem, whereby their quality is assessed with the preparation, evaluation, and comparison between different feature combinations. 
 |
@@ -139,8 +139,6 @@ PDA <- Alzheimer_Train
 </details>
 
 ##  1.2 Data Quality Assessment
-|
-| Data quality assessment:
 |
 | **[A]** No missing observations noted for any variable.
 |
@@ -381,8 +379,6 @@ if (length(names(DQA.Predictors.Numeric))==0) {
 
 ###  1.3.1 Outlier
 |
-| Outlier data assessment:
-|
 | **[A]** Few outliers noted for most variables  with the numeric data visualized through a boxplot including observations classified as suspected outliers using the IQR criterion. The IQR criterion means that all observations above the (75th percentile + 1.5 x IQR) or below the (25th percentile - 1.5 x IQR) are suspected outliers, where IQR is the difference between the third quartile (75th percentile) and first quartile (25th percentile). Outlier treatment for numerical stability remains optional depending on potential model requirements for the subsequent steps. 6 variables were observed with at least 10 outliers listed as follows:
 |      **[A.1]** <span style="color: #FF0000">Apolipoprotein_CI</span> variable (10 outliers detected)
 |      **[A.2]** <span style="color: #FF0000">Cortisol</span> variable (11 outliers detected)
@@ -450,8 +446,6 @@ dim(DPA.Predictors.Numeric)
 </details>
 
 ###  1.3.2 Zero and Near-Zero Variance
-|
-| Zero and near-zero variance data assessment:
 |
 | **[A]** Low variance noted for 2 variables from the previous data quality assessment using a lower threshold.
 |
@@ -525,8 +519,6 @@ if ((nrow(DPA_LowVariance[DPA_LowVariance$nzv,]))==0){
 </details>
 
 ###  1.3.3 Collinearity
-|
-| High collinearity data assessment:
 |
 | **[A]** No high correlation > 95% were noted for any variable pair as confirmed using the preprocessing summaries from the <mark style="background-color: #CCECFF">**caret**</mark> and <mark style="background-color: #CCECFF">**lares**</mark> packages.
 |
@@ -633,8 +625,6 @@ if (DPA_HighlyCorrelatedCount > 0) {
 
 ###  1.3.4 Linear Dependencies
 |
-| Linear dependency data assessment:
-|
 | **[A]** No linear dependencies noted for any subset of variables using the preprocessing summary from the <mark style="background-color: #CCECFF">**caret**</mark> package applying the <span style="color: #0000FF">findLinearCombos</span> method which utilizes the QR decomposition of a matrix to enumerate sets of linear combinations (if they exist). 
 |
 |
@@ -720,7 +710,6 @@ if (DPA_LinearlyDependentCount > 0) {
 </details>
 
 ###  1.3.5 Pre-Processed Dataset
-| Preliminary dataset assessment:
 |
 | **[A]** 333 rows (observations)
 |      **[A.1]** Train Set = 267 observations
@@ -790,8 +779,6 @@ dim(PMA_PreModelling_Test)
 </details>
 
 ##  1.4 Data Exploration
-|
-| Exploratory data analysis:
 |
 | **[A]** Numeric variables which demonstrated differential relationships with the <span style="color: #FF0000">Class</span> response variable include:
 |      **[A.1]** <span style="color: #FF0000">Fibrinogen</span> variable (numeric)
@@ -1526,9 +1513,7 @@ LDA_GA_Test
 
 </details>
 
-##  1.6 Model Evaluation Summary
-|
-| Model performance comparison:
+##  1.6 Consolidated Findings
 |
 | **[A]** The simulated annealing and genetic algorithms to select a subset of informative predictors performed better for models without an inherent variable selection feature (i.e. linear discriminant analysis as compared to random forest). 
 |      **[A.1]** **RF: Random Forest** (<mark style="background-color: #CCECFF">**randomForest**</mark> package)
@@ -1612,8 +1597,12 @@ print(Accuracy_Summary, row.names=FALSE)
 ```
 
 </details>
-
-# **2. References**
+|
+# **2. Summary** <a name="summary"></a>
+|
+| ![](D:/Github_Codes/ProjectPortfolio/Portfolio_Project_19/docs/Project19_Summary.png)
+|
+# **3. References**
 |
 | **[Book]** [Applied Predictive Modeling](http://appliedpredictivemodeling.com/) by Max Kuhn and Kjell Johnson
 | **[Book]** [An Introduction to Statistical Learning](https://www.statlearning.com/) by Gareth James, Daniela Witten, Trevor Hastie and Rob Tibshirani
