--- a/codes/SelectingInformativePredictorsUsingSimulatedAnnealingAndGeneticAlgorithms.Rmd
+++ b/codes/SelectingInformativePredictorsUsingSimulatedAnnealingAndGeneticAlgorithms.Rmd
@@ -1,6 +1,6 @@
 ---
 title: 'Feature Selection : Selecting Informative Predictors Using Simulated Annealing and Genetic Algorithms'
-author: "John Pauline Pineda"
+author: "<b><a href='https://github.com/JohnPaulinePineda'>John Pauline Pineda</a></b>"
 date: "December 22, 2022"
 output: 
   html_document:
@@ -56,7 +56,7 @@ library(pls)
 library(corrplot)
 library(tidyverse)
 library(lares)
-library(DMwR)
+library(DMwR2)
 library(gridExtra)
 library(rattle)
 library(rpart.plot)
@@ -1600,7 +1600,7 @@ print(Accuracy_Summary, row.names=FALSE)
 |
 # **2. Summary** <a name="summary"></a>
 |
-| ![](D:/Github_Codes/ProjectPortfolio/Portfolio_Project_19/docs/Project19_Summary.png)
+| ![](D:/Github_Codes/ProjectPortfolio/Portfolio_Project_19/images/Project19_Summary.png)
 |
 # **3. References**
 |
@@ -1621,7 +1621,7 @@ print(Accuracy_Summary, row.names=FALSE)
 | **[R Package]** [corrplot](https://cran.r-project.org/web/packages/corrplot/corrplot.pdf) by Taiyun Wei
 | **[R Package]** [tidyverse](https://cran.r-project.org/web/packages/tidyverse/tidyverse.pdf) by Hadley Wickham
 | **[R Package]** [lares](https://cran.rstudio.com/web/packages/lares/lares.pdf) by Bernardo Lares
-| **[R Package]** [DMwR](https://mran.microsoft.com/snapshot/2016-05-02/web/packages/DMwR/DMwR.pdf) by Luis Torgo
+| **[R Package]** [DMwR2](https://mran.microsoft.com/snapshot/2016-05-02/web/packages/DMwR/DMwR.pdf) by Luis Torgo
 | **[R Package]** [gridExtra](https://cran.r-project.org/web/packages/gridExtra/gridExtra.pdf) by Baptiste Auguie and Anton Antonov
 | **[R Package]** [rattle](https://cran.r-project.org/web/packages/rattle/rattle.pdf) by Graham Williams
 | **[R Package]** [rpart.plot](https://cran.r-project.org/web/packages/rpart.plot/rpart.plot.pdf) by Stephen Milborrow
