Formulated the R Markdown
Updated the renv.lock file

--- a/codes/SelectingInformativePredictorsUsingSimulatedAnnealingAndGeneticAlgorithms.Rmd
+++ b/codes/SelectingInformativePredictorsUsingSimulatedAnnealingAndGeneticAlgorithms.Rmd
@@ -1587,7 +1587,7 @@ print(Accuracy_Summary, row.names=FALSE)
                           main = "Classification Model Performance Comparison",
                           ylab = "Model",
                           xlab = "Accuracy",
-                          auto.key = list(adj = 1),
+                          auto.key = list(adj=1, space="top", columns=2),
                           type=c("p", "h"),
                           origin = 0,
                           alpha = 0.45,
